Fix padding on header and banner, remove testemonial min-width for viewability on small screens

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ header {
 
 ul {
 	list-style-type: none;
-	padding: 0px;
+	padding: 8px;
 	margin: 0px;
 }
 
@@ -44,7 +44,7 @@ main {
 	align-items: center;
 	justify-content: center;
 	gap: 32px;
-	padding: 10em 0;
+	padding: 10em 2em;
 	flex-wrap: wrap;
 }
 
@@ -134,7 +134,6 @@ section div {
 	font-style: italic;
 	font-weight: 300;
 	max-width: 800px;
-	min-width: 450px;
 }
 
 #thor {
